websocket naming convention and adding to api.yaml
