# backend/webserver/sockets/user.js
@@ -33,23 +33,24 @@ module.exports = class UserSocket extends Socket {
     }
 
     init() {
-        this.socket.on("getAllUserData", async (data) => {
-            console.log("GETTING ALL USER DATA");
+
+        this.socket.on("userGetData", async (data) => {
 
             if (this.isAdmin()) {
                 try {
                     const users = await dbGetAllUser();
                     const mappedUsers = users.map(x => minimalFields(x));
 
-                    this.socket.emit("userDataAll", {success: true, users: mappedUsers});
+                    this.socket.emit("userData", {success: true, users: mappedUsers});
                 } catch (e) {
-                    this.socket.emit("userDataAll", {success: false, message: "Failed to retrieve all users"});
-                    this.logger.error("DB error while loading all users from database" + JSON.stringify(data));
+                    this.socket.emit("userData", {success: false, message: "Failed to retrieve all users"});
+                    this.logger.error("DB error while loading all users from database" + JSON.stringify(e));
                 }
             } else {
-                this.socket.emit("userDataAll", {success: false, message: "User rights and argument mismatch"});
-                this.logger.error("User right and request parameter mismatch" + JSON.stringify(data));
+                this.socket.emit("userData", {success: false, message: "User rights and argument mismatch"});
+                this.logger.error("User right and request parameter mismatch" + JSON.stringify(e));
             }
         });
+
     }
 }
