# docs/api.yml
@@ -31,6 +31,24 @@ channels:
           - $ref: '#/components/messages/documentGetAll'
           - $ref: '#/components/messages/logGetAll'
           - $ref: '#/components/messages/logAdd'
+          - $ref: '#/components/messages/userGetData'
+          - $ref: '#/components/messages/tagGet'
+          - $ref: '#/components/messages/tagSetGet'
+          - $ref: '#/components/messages/tagSetGetAll'
+          - $ref: '#/components/messages/tagGetAll'
+          - $ref: '#/components/messages/tagGetAll'
+          - $ref: '#/components/messages/tagSetUpdate'
+          - $ref: '#/components/messages/tagSetPublish'
+          - $ref: '#/components/messages/tagSetDelete'
+          - $ref: '#/components/messages/collabSubscribe'
+          - $ref: '#/components/messages/collabUnsubscribe'
+          - $ref: '#/components/messages/stats'
+          - $ref: '#/components/messages/settingGetAll'
+          - $ref: '#/components/messages/settingSet'
+          - $ref: '#/components/messages/settingGetData'
+          - $ref: '#/components/messages/settingSave'
+          - $ref: '#/components/messages/serviceConnect'
+          - $ref: '#/components/messages/serviceDisconnect'
     subscribe:
       message:
         oneOf:
@@ -40,6 +58,14 @@ channels:
           - $ref: '#/components/messages/collabStart'
           - $ref: '#/components/messages/commentRefresh'
           - $ref: '#/components/messages/commentExport'
+          - $ref: '#/components/messages/userData'
+          - $ref: '#/components/messages/tagSetRefresh'
+          - $ref: '#/components/messages/tagRefresh'
+          - $ref: '#/components/messages/tagSetPublished'
+          - $ref: '#/components/messages/tagSetUpdated'
+          - $ref: '#/components/messages/settingRefresh'
+          - $ref: '#/components/messages/settingNavigation'
+          - $ref: '#/components/messages/settingData'
 
 components:
   messages:
@@ -305,6 +331,271 @@ components:
           meta:
             type: object
             description: Additional meta data
+    userGetData:
+      name: userGetData
+      title: Get all users
+      summary: Get all users (only for admin)
+    userData:
+      name: userData
+      title: All user data
+      summary: Update all user data
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          success:
+            type: boolean
+            description: If the retrieving was successful
+          users:
+            type: array
+            description: List of User DB Objects
+    tagGet:
+      name: tagGet
+      title: Get tag
+      summary: Get tag by Id
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          tagId:
+            $ref: "#/components/schemas/tagId"
+    tagSetGet:
+      name: tagSetGet
+      title: Get tag set
+      summary: Get tag set by Id
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          tagSetId:
+            $ref: "#/components/schemas/tagSetId"
+    tagSetGetAll:
+      name: tagSetGetAll
+      title: Get all tag sets
+      summary: Get all tag sets (only for admin) otherwise only the tag sets of the user
+    tagGetAll:
+      name: tagGetAll
+      title: Get all tags
+      summary: Get all tags (only for admin) otherwise only the tags of the user
+    tagSetUpdate:
+      name: tagSetUpdate
+      title: Save tag set
+      summary: Save tag set (if tagSetId is set, the tag set will be updated)
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          tagSetId:
+            $ref: "#/components/schemas/tagSetId"
+          tagSet:
+            type: object
+            description: Tag Set DB Object to overwrite
+          tags:
+            type: array
+            description: List of tags
+            items:
+              type: object
+              description: Tag DB Object to overwrite
+    tagSetPublish:
+      name: tagSetPublish
+      title: Publish tag set
+      summary: Publish tag set by Id
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          tagSetId:
+            $ref: "#/components/schemas/tagSetId"
+    tagSetDelete:
+      name: tagSetDelete
+      title: Delete tag set
+      summary: Delete tag set by Id
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          tagSetId:
+            $ref: "#/components/schemas/tagSetId"
+    tagSetRefresh:
+      name: tagSetRefresh
+      title: Refresh tag sets
+      summary: Refresh tag sets
+      payload:
+        type: array
+        description: List of DB Tag Set Objects
+    tagRefresh:
+      name: tagRefresh
+      title: Refresh tags
+      summary: Refresh tags
+      payload:
+        type: array
+        description: List of DB Tag Objects
+    tagSetUpdated:
+      name: tagSetUpdated
+      title: Saved tag set
+      summary: Info about the saved tag set after tagSetSave
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          success:
+            type: boolean
+            description: If the saving was successful
+          message:
+            type: string
+            description: Message if the saving was not successful
+    tagSetPublished:
+      name: tagSetPublished
+      title: Published tag set
+      summary: Info about the published tag set after tagSetPublish
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          success:
+            type: boolean
+            description: If the publishing was successful
+          message:
+            type: string
+            description: Message if the publishing was not successful
+    collabSubscribe:
+      name: collabSubscribe
+      title: Subscribe to collaborations
+      summary: Subscribe to collaboration in an document
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          documentId:
+            $ref: "#/components/schemas/documentId"
+    collabUnsubscribe:
+      name: collabUnsubscribe
+      title: Unsubscribe from collaborations
+      summary: Unsubscribe from collaboration in an document
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          documentId:
+            $ref: "#/components/schemas/documentId"
+    stats:
+      name: stats
+      title: Add stats
+      summary: Add stats entry
+      payload:
+        type: object
+        description: Payload object
+        required:
+        - action
+        properties:
+          action:
+            type: string
+            description: Action name
+          data:
+            type: object
+            description: Additional data
+    settingSave:
+      name: settingSave
+      title: Save setting
+      summary: Save setting
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          key:
+            type: string
+            description: Setting key
+          value:
+            type: string
+            description: Setting value
+    settingGetData:
+      name: settingGetData
+      title: Get all settings
+      summary: Get all settings (only for admin)
+    settingData:
+      name: settingData
+      title: All settings
+      summary: All settings
+      payload:
+        type: array
+        description: List of DB settings objects
+    settingSet:
+      name: settingSet
+      title: Set setting
+      summary: Set setting as user (overwrites global setting)
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          key:
+            type: string
+            description: Setting key
+          value:
+            type: string
+            description: Setting value
+    settingGetAll:
+      name: settingGetAll
+      title: Get all settings
+      summary: Get all settings overwritten by user settings
+    settingNavigation:
+      name: settingNavigation
+      title: Get navigation settings
+      summary: Get navigation settings
+      payload:
+        type: object
+        description: Payload object
+        properties:
+          groups:
+            type: array
+            description: List of navigation groups
+            items:
+              type: object
+              description: Navigation group
+          elements:
+            type: array
+            description: List of navigation elements
+            items:
+              type: object
+              description: Navigation element
+    settingRefresh:
+      name: settingRefresh
+      title: Refresh settings
+      summary: Refresh settings
+      payload:
+        type: array
+        description: List of DB settings objects
+    serviceConnect:
+      name: serviceConnect
+      title: Connect service
+      summary: Connect client to service
+      payload:
+        type: object
+        description: Payload object
+        required:
+          - service
+        properties:
+          service:
+            type: string
+            description: Service name
+          data:
+            type: object
+            description: Additional data
+    serviceDisconnect:
+      name: serviceDisconnect
+      title: Disconnect service
+      summary: Disconnect client from service
+      payload:
+        type: object
+        description: Payload object
+        required:
+          - service
+        properties:
+          service:
+            type: string
+            description: Service name
+          data:
+            type: object
+            description: Additional data
   schemas:
     documentId:
       type: integer
@@ -312,6 +603,9 @@ components:
     tagId:
       type: integer
       description: id of the tag
+    tagSetId:
+        type: integer
+        description: id of the tag set
     annotationId:
       type: integer
       description: id of the annotation
